RESOLVED FIXED131646
REGRESSION(r166027) Menu is shown and immediately hidden after double tap gesture
https://bugs.webkit.org/show_bug.cgi?id=131646
Summary REGRESSION(r166027) Menu is shown and immediately hidden after double tap ges...
Enrica Casucci
Reported 2014-04-14 16:08:09 PDT
This is a regression introduced by http://trac.webkit.org/changeset/166027.
Attachments
Patch (6.35 KB, patch)
2014-04-14 16:16 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-04-14 16:16:38 PDT
Enrica Casucci
Comment 2 2014-04-14 16:48:08 PDT
Committed revision 167280.
Note You need to log in before you can comment on or make changes to this bug.